# PuissanceC

./: .gitignore  CMakeLists.txt  Game.c  Game.h  LICENSE  README.md  ihm.c  ihm.cpp  ihm.h  main.c  makefile  minmax.c  minmax.h  minmax_o.c  network.c  network.h  network_o.c  network_o.h  solver.c  solver.h  testSolver.cc
